basically rewrite the whole thing
implement a capability/profile based structure